<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:text="@string/textoPrincipal"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ladoUno"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            >

        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/hintUno"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:id="@+id/ladoUno">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ladoDos"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            >

        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/hintDos"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:id="@+id/ladoDos">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ladotres"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            >

        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/hinttres"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:id="@+id/ladoTres">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/triangulo"
            android:paddingRight="10dp"
            android:onClick="isCheektriangulo"
            android:id="@+id/triangulo">
        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cuadrado"
            android:paddingLeft="10dp"
            android:onClick="isCheekCuadro"
            android:id="@+id/cuadrado">
        </RadioButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:text="@string/resultado"
            android:id="@+id/resultado">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:text="">

        </TextView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/calcular"
            android:onClick="Calcular"
            android:id="@+id/Calcular">

        </Button>

    </LinearLayout>


</LinearLayout>
